Replace 'Get Involved' with 'Donate' throughout site

--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@ organizers:
 		<a class="button" href="{{site.baseurl}}/program">Learn More</a>
 	</li>
 	<li class="cta-list__item dark-green-bg">
-		<h2>Get Involved</h2>
+		<h2>Donate</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
 		<a class="button" href="{{site.baseurl}}/donate">Learn More</a>
 	</li>
