--- a/program/index.html
+++ b/program/index.html
@@ -47,7 +47,7 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
 </section>
 <ul class="cta-list">
 	<li class="cta-list__item dark-green-bg">
-		<h2>Get Involved</h2>
+		<h2>Donate</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
 		<a class="button" href="{{site.baseurl}}/donate">Learn More</a>
 	</li>
