Update footer and promo components

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ intro: "The purpose of HOPE Leadership Academy is to identify students who have 
 		<a class="button" href="{{site.baseurl}}/program">Learn More</a>
 	</li>
 	<li class="cta-list__item dark-green-bg">
-		<h2>Donate Today</h2>
+		<h2>Donate</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
 		<a class="button" href="{{site.baseurl}}/donate">Learn More</a>
 	</li>
