Update graph-list content and styles

--- a/about/index.html
+++ b/about/index.html
@@ -46,41 +46,23 @@ organizers:
 	<h2 class="heading">Our Impact</h2>
 	<ul class="link-list--interactive" id="graph-links">
 		<li class="link-list__item link-list__item--active" data-id="attendance">Attendance</li>
-		<li class="link-list__item" data-id="discipline">Discipline</li>
-		<li class="link-list__item" data-id="academics">Academics</li>
-		<li class="link-list__item" data-id="aspire">Aspire Scores</li>
+		<li class="link-list__item" data-id="grades">Grades</li>
+		<li class="link-list__item" data-id="extracurricular">Extracurricular</li>
 	</ul>
 	<ul class="graph-list" id="graphs">
 		<li class="graph-list__item" id="attendance">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
-				<figcaption>
-					Attendence increased x% amongst students in the HOPE Leadership Academy
-				</figcaption>
+				<img src="{{site.baseurl}}/assets/img/data/attendance.jpg" alt="Attendance improvements from students in HOPE program.">
 			</figure>
 		</li>
-		<li class="graph-list__item u-hidden" id="discipline">
+		<li class="graph-list__item u-hidden" id="grades">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
-				<figcaption>
-					Attendence increased x% amongst students in the HOPE Leadership Academy
-				</figcaption>
+				<img src="{{site.baseurl}}/assets/img/data/grades.jpg" alt="Grade improvements from students in HOPE program.">
 			</figure>
 		</li>
-		<li class="graph-list__item u-hidden" id="academics">
+		<li class="graph-list__item u-hidden" id="extracurricular">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
-				<figcaption>
-					Attendence increased x% amongst students in the HOPE Leadership Academy
-				</figcaption>
-			</figure>
-		</li>
-		<li class="graph-list__item u-hidden" id="aspire">
-			<figure>
-				<img src="{{site.baseurl}}/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
-				<figcaption>
-					Attendence increased x% amongst students in the HOPE Leadership Academy
-				</figcaption>
+				<img src="{{site.baseurl}}/assets/img/data/extracurricular.jpg" alt="Extracurricular improvements from students in HOPE program.">
 			</figure>
 		</li>
 	</ul>
