Updates to header component and HOPE logo

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ intro: "The mission of HOPE Leadership Academy is to impact lives and communitie
 By improving graduation rates, we can change lives, eradicate poverty, and impact the local and state economy."
 
 organizers:
-- name: "Libby Parker"
+- name: "Dr. Libby Parker"
   img_path: "libby.jpg"
   bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_0"
 
