Update content and styles in graph list component

--- a/about/index.html
+++ b/about/index.html
@@ -45,24 +45,34 @@ organizers:
 <section class="container">
 	<h2 class="heading">Our Impact</h2>
 	<ul class="link-list--interactive" id="graph-links">
-		<li class="link-list__item link-list__item--active" data-id="attendance">Attendance</li>
-		<li class="link-list__item" data-id="grades">Grades</li>
+		<li class="link-list__item link-list__item--active" data-id="motivation">Motivation</li>
+		<li class="link-list__item" data-id="attendance">Attendance</li>
+		<li class="link-list__item" data-id="academics">Accademics</li>
 		<li class="link-list__item" data-id="extracurricular">Extracurricular</li>
 	</ul>
 	<ul class="graph-list" id="graphs">
-		<li class="graph-list__item" id="attendance">
+		<li class="graph-list__item" id="motivation">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/data/attendance.jpg" alt="Attendance improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--tall" src="{{site.baseurl}}/assets/img/data/motivation-tall.jpg" alt="Motivation for the HOPE Leadership program.">
+				<img class="graph-list__img graph-list__img--wide" src="{{site.baseurl}}/assets/img/data/motivation-wide.jpg" alt="Motivation for the HOPE Leadership program.">
 			</figure>
 		</li>
-		<li class="graph-list__item u-hidden" id="grades">
+		<li class="graph-list__item u-hidden" id="attendance">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/data/grades.jpg" alt="Grade improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--tall" src="{{site.baseurl}}/assets/img/data/attendance-tall.jpg" alt="Attendance improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--wide" src="{{site.baseurl}}/assets/img/data/attendance-wide.jpg" alt="Attendance improvements from students in HOPE program.">
+			</figure>
+		</li>
+		<li class="graph-list__item u-hidden" id="academics">
+			<figure>
+				<img class="graph-list__img graph-list__img--tall" src="{{site.baseurl}}/assets/img/data/academics-tall.jpg" alt="Accademic improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--wide" src="{{site.baseurl}}/assets/img/data/academics-wide.jpg" alt="Accademic improvements from students in HOPE program.">
 			</figure>
 		</li>
 		<li class="graph-list__item u-hidden" id="extracurricular">
 			<figure>
-				<img src="{{site.baseurl}}/assets/img/data/extracurricular.jpg" alt="Extracurricular improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--tall" src="{{site.baseurl}}/assets/img/data/extracurricular-tall.jpg" alt="Extracurricular improvements from students in HOPE program.">
+				<img class="graph-list__img graph-list__img--wide" src="{{site.baseurl}}/assets/img/data/extracurricular-wide.jpg" alt="Extracurricular improvements from students in HOPE program.">
 			</figure>
 		</li>
 	</ul>
