Added "Under Construction" graphic in front of site

--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+
+
+<body>
+   <table id="wrapper">
+      <tr>
+         <td><img src="/assets/img/construction.svg"/></td>
+      </tr>
+   </table>
+
+<style>
+html, body, #wrapper {
+   background-color:f2f1f0;
+   height:82%;
+   width: 82%;
+   margin: auto;
+}
+#wrapper td {
+   vertical-align: middle;
+   text-align: center;
+}
+</style>
+</body>
+<!---
+
 ---
 layout: default
 
@@ -23,3 +47,5 @@ intro: "The purpose of HOPE Leadership Academy is to identify students who have 
 		<a class="button" href="{{site.baseurl}}/donate">Learn More</a>
 	</li>
 </ul>
+
+--->
