Redirected all indexs to Under Construction page

--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,8 @@
+<head>
+    <title>IU Webmaster redirect</title>
+    <META http-equiv="refresh" content="0;URL=http://hopeleadershipacademy.org/">
+  </head>
+
 ---
 layout: default
 
