--- a/donate/index.html
+++ b/donate/index.html
@@ -1,3 +1,8 @@
+<head>
+    <title>IU Webmaster redirect</title>
+    <META http-equiv="refresh" content="0;URL=http://hopeleadershipacademy.org/">
+  </head>
+
 ---
 layout: default
 
@@ -24,9 +29,9 @@ intro: "You can make a difference!  Donate today and help us expand this program
           {% if tier.testimonial %}
             <div class="quote__img">
               <video autoplay loop muted poster="{{ site.baseurl }}/assets/img/students/{{ tier.testimonial.video }}.jpg">
-                <source 
+                <source
                 src="{{ site.baseurl }}/assets/vid/{{ tier.testimonial.video }}.mp4" type="video/mp4">
-                <source 
+                <source
                 src="{{ site.baseurl }}/assets/vid/{{ tier.testimonial.video }}.webm" type="video/webm">
               </video>
             </div>
@@ -44,10 +49,10 @@ intro: "You can make a difference!  Donate today and help us expand this program
       <h1>Donate to HOPE Leadership Academy</h1>
       <button class="btn--small btn--outline" id="noThanksBtn">No Thanks</button>
     </div>
-    <script src="https://www.dntly.com/assets/js/v1/form.js" 
-            data-donately-id="act_db7809b55acf" 
-            data-stripe-publishable-key="pk_live_ahKAepi58DCsg9CnnuJsfFty" 
-            data-donately-campaign-id="3429" 
+    <script src="https://www.dntly.com/assets/js/v1/form.js"
+            data-donately-id="act_db7809b55acf"
+            data-stripe-publishable-key="pk_live_ahKAepi58DCsg9CnnuJsfFty"
+            data-donately-campaign-id="3429"
             async>
     </script>
   </div>
