--- a/program/index.html
+++ b/program/index.html
@@ -1,3 +1,8 @@
+<head>
+    <title>IU Webmaster redirect</title>
+    <META http-equiv="refresh" content="5;URL=http://hopeleadershipacademy.org/">
+  </head>
+
 ---
 layout: default
 
